# private-data-hosting

./: .env.sample  .gitignore  .lefthook.yml  Dockerfile  Makefile  README.md  WINDOWS_UPLOADER.md  docker-compose.yml  download_data.sh  pyproject.toml
app/: main.py
app/static/: index.html
docs/: CLI_USAGE.md  GROUP_SETUP.md
