[project]
name = "private-data-hosting"
version = "0.1.0"
description = "Private data hosting service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
